fix spacing

--- a/assets/css/fix.css
+++ b/assets/css/fix.css
@@ -2,7 +2,28 @@ body {
 	color: #555;
 }
 
+body, input, textarea, select {
+    font-size: 13pt;
+}
+
+
+@media screen and (min-width: 736px) {
+	#datasets.wrapper {
+		padding-top: 4em;
+		padding-bottom: 4em;
+	}
+}
+
+@media screen and (min-width: 736px) {
+	#datasets.wrapper {
+		padding-top: 4em;
+		padding-bottom: 4em;
+	}
+}
+
+
 #datasets {
+
 	.box.style2 h3 {
 		margin-bottom: 0em;
 	}
@@ -26,11 +47,20 @@ body {
 
 #massmaps, #supernova, #polite, #emotion, #chestxray, #surgery {
 	text-align: left;
+	.image {
+		text-align: center;
+	}
+	header {
+		margin: 0em;
+	}
+	footer {
+		margin: 0em;
+	}
 }
 
-#massmaps span, #supernova span, #polite span, #emotion span, #chestxray span, #surgery span {
+/* #massmaps span, #supernova span, #polite span, #emotion span, #chestxray span, #surgery span {
 	text-align: center;
-}
+} */
 
 
 @media screen and (min-width: 980px) {
@@ -77,6 +107,9 @@ body {
 	.button {
 		width: 100%;
 	} 
+	.button-spacer { 
+		text-align: center;
+	}
 }
 
 
